templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: foodcalorie
  name: foodcalorie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodcalorie
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: foodcalorie
    spec:
      containers:
      - image: harbor.wbl.com/fitness/foodcalorie:BLDID230114-200840
        name: foodcalorie
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-seoul
        resources: {}
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
          type: ""
        name: tz-seoul
status: {}
---
